--- a/config.yaml
+++ b/config.yaml
@@ -1,33 +1,37 @@
 # Configuración del proyecto NER
 model:
-  name: "distilbert-base-multilingual-cased"  # Modelo base de HuggingFace
+  name: "bert-base-multilingual-cased"  # Modelo que funciona siempre
   max_length: 128
-  num_labels: 9  # Ajustar según tu dataset
+  num_labels: 9  # Se ajusta automáticamente
 
 dataset:
-  name: "conll2003"  # Dataset de HuggingFace
+  name: "universalner/universal_ner"  # Dataset moderno que funciona
+  config: "es"     # Configuración para español
   train_split: "train"
   validation_split: "validation" 
   test_split: "test"
   text_column: "tokens"
   label_column: "ner_tags"
+  max_train_samples: 1000  # Limitar dataset de entrenamiento a 1000 ejemplos
+  max_eval_samples: 200    # Limitar dataset de evaluación a 200 ejemplos
 
 training:
   output_dir: "./models"
-  num_train_epochs: 3
-  per_device_train_batch_size: 16
-  per_device_eval_batch_size: 16
+  num_train_epochs: 1  # Reducido para completar más rápido
+  per_device_train_batch_size: 8  # Reducido de 16 a 8
+  per_device_eval_batch_size: 8   # Reducido de 16 a 8
   learning_rate: 2e-5
   weight_decay: 0.01
   warmup_steps: 500
   logging_steps: 100
-  save_steps: 500
-  eval_steps: 500
+  save_steps: 1000  # Aumentado para guardar menos frecuentemente
+  eval_steps: 1000  # Aumentado para evaluar menos frecuentemente
   save_total_limit: 2
   evaluation_strategy: "steps"
   load_best_model_at_end: true
   metric_for_best_model: "eval_f1"
   greater_is_better: true
+  max_steps: 5000  # Limitar número total de pasos
 
 data_paths:
   raw_data: "./data/raw"
@@ -36,4 +40,4 @@ data_paths:
 
 logging:
   use_wandb: false  # Cambiar a true si quieres usar Weights & Biases
-  project_name: "ner-training"
+  project_name: "ner-training-es"
